version/derive/tests/ui/fail_invalid_range_equal.stderr
error: The end version should be higher then the start version.
 --> tests/ui/fail_invalid_range_equal.rs:5:1
  |
5 | declare_versioned!(VersionedMessage 1..1);
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `declare_versioned` (in Nightly builds, run with -Z macro-backtrace for more info)
